# AFROS

./: .gitignore
cad/modules/: 2004A_with_i2c.SLDPRT
catkin_ws/: launchfile.launch  make.sh  start.sh
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/afros_core/: CMakeLists.txt  package.xml
catkin_ws/src/afros_core/include/afros_core/: common_lib.h  common_lib.hpp  error_val.hpp  nullable.hpp  registry.h  registry.hpp  topics.h  topics.hpp
catkin_ws/src/afros_core/include/afros_core/access/: access.hpp  publication_access.hpp  subscription_access.hpp
catkin_ws/src/afros_core/include/afros_core/connection/: codeable.hpp  connection.hpp
catkin_ws/src/afros_core/include/afros_core/connection_commander/: connection_commander_callbacks.hpp
catkin_ws/src/afros_core/include/afros_core/state_machine_commander/: state_machine_commander_callbacks.h  state_machine_commander_callbacks.hpp
catkin_ws/src/afros_core/msg/: CMakeLists.txt  connection_assign.msg  connection_broadcast.msg  connection_offline.msg  connection_pub_sub.msg  connection_status.msg  connection_subscribe.msg  identifier.msg  raw_data.msg  state_machine_assign.msg  state_machine_broadcast.msg  state_machine_current_state.msg  state_machine_offline.msg  state_machine_order.msg
catkin_ws/src/afros_core/src/: CMakeLists.txt  common_lib.cpp  topics.cpp
catkin_ws/src/afros_core/src/access/: CMakeLists.txt  access.cpp  publication_access.cpp  subscription_access.cpp
catkin_ws/src/afros_core/src/connection/: CMakeLists.txt  connection.cpp
catkin_ws/src/afros_core/src/connection_commander/: CMakeLists.txt  connection_commander.cpp  connection_commander_callbacks.cpp
catkin_ws/src/afros_core/src/state_machine_commander/: CMakeLists.txt  state_machine_commander.cpp  state_machine_commander_callbacks.cpp
catkin_ws/src/afros_core/srv/: CMakeLists.txt  connection_get_status.srv  connection_subscribe.srv  state_machine_get_current_state.srv  state_machine_get_id_by_name.srv  state_machine_get_name_by_id.srv  state_machine_get_status.srv  state_machine_status.srv
catkin_ws/src/afros_jetson/: CMakeLists.txt  package.xml
catkin_ws/src/afros_jetson/doc/: lcd_node.txt
catkin_ws/src/afros_jetson/include/afros_jetson/: node_names.hpp  topics.hpp
catkin_ws/src/afros_jetson/include/afros_jetson/lcd/: lcd_message_utils.hpp
catkin_ws/src/afros_jetson/include/afros_jetson/lcd_connection/: lcd_connection.hpp  lcd_connection_access.hpp
catkin_ws/src/afros_jetson/include/afros_jetson/lcd_node/: i2c_lcd_device.hpp  lcd_driver.hpp  lcd_message_utils.hpp  lcd_node_old.hpp
catkin_ws/src/afros_jetson/include/afros_jetson/libi2c/: i2c.h
catkin_ws/src/afros_jetson/msg/: CMakeLists.txt  lcd_set.msg
catkin_ws/src/afros_jetson/src/: CMakeLists.txt
catkin_ws/src/afros_jetson/src/afros_jetson/: CMakeLists.txt
catkin_ws/src/afros_jetson/src/afros_jetson/lcd_node/: CMakeLists.txt  i2c_lcd_device.cpp  lcd_node.cpp
catkin_ws/src/afros_jetson/src/afros_jetson/lcd_node/scripts/: I2C_LCD_driver.py
catkin_ws/src/afros_jetson/src/lcd/: CMakeLists.txt  i2c_lcd_device.cpp  lcd_message_utils.cpp  lcd_node.cpp
catkin_ws/src/afros_jetson/src/lcd_connection/: CMakeLists.txt  lcd_connection.cpp  lcd_connection_access.cpp
catkin_ws/src/afros_jetson/src/lcd_node/: CMakeLists.txt  lcd_driver.cpp  lcd_node.cpp  lcd_node_old.cpp
catkin_ws/src/afros_jetson/src/libi2c/: CMakeLists.txt  i2c.c
catkin_ws/src/afros_jetson/test/: CMakeLists.txt
catkin_ws/src/afros_jetson/test/lcd/: CMakeLists.txt  lcd_test.cpp
doc/: CLionSetup.txt  JetsonSetup  shell.sh  test.service  test.timer
